add curso especialista springdata

--- a/SpringApplication/cursos/Especialista-spring/food-api/src/main/resources/application-test.properties
+++ b/SpringApplication/cursos/Especialista-spring/food-api/src/main/resources/application-test.properties
@@ -5,14 +5,15 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 #sql
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.sql.init.data-locations=classpath:sql/import.sql
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.data-locations=classpath:sql/control.sql
+
 
 
 #-Dspring.profiles.active=dev
