--- a/SpringApplication/cursos/Especialista-spring/food-api/src/main/resources/application-dev.properties
+++ b/SpringApplication/cursos/Especialista-spring/food-api/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 #database
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://yamanote.proxy.rlwy.net:40184/railway?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=MqmTaMsDlIFdxaSdeBVHQlrGmEYNioSA
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
