--- a/SpringApplication/cursos/Especialista-spring/food-api/src/main/resources/application.properties
+++ b/SpringApplication/cursos/Especialista-spring/food-api/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=food-api
+#spring.profiles.active=@spring.profiles.active@'
+spring.profiles.active=dev
+spring.application.name=controlapi
+
+# hibernate
+spring.jpa.hibernate.ddl-auto=update
